--- a/index.html
+++ b/index.html
@@ -169,6 +169,19 @@
             margin-right: 20px;
         }
 
+        .flex-container {
+            display: flex;
+            flex-direction: column;
+            /* Arrange items vertically */
+            justify-content: space-between;
+            /* Distribute space between items */
+            align-items: flex-start;
+        }
+
+        .flex-item {
+            margin: 10px;
+            /* Add space between items */
+        }
     </style>
 </head>
 
@@ -217,7 +230,7 @@
 
 
 
-<!-- Categories -->
+    <!-- Categories -->
     <div class="container mt-4">
         <div class="row">
             <div class="col-md-3">
@@ -225,7 +238,7 @@
                     <div class="card-body">
                         <div class="form-group " id="categoryOptions">
                             <label for="categories"><b>Categories</b></label>
-                            <div class="form-check" >
+                            <div class="form-check">
                                 <input type="checkbox" class="form-check-input" id="beverages" value="beverages" />
                                 <label class="form-check-label" for="category1">Beverages</label>
                             </div>
@@ -243,7 +256,7 @@
                             </div>
                             <div class="form-check">
                                 <input type="checkbox" class="form-check-input" id="home_needs" value="home_needs""/>
-                                <label class="form-check-label" for="category3">Home Needs</label>
+                                <label class=" form-check-label" for="category3">Home Needs</label>
                             </div>
                         </div>
                     </div>
@@ -273,28 +286,25 @@
                         <div class="form-group">
                             <label for="priceRange"><b>Filter By Price</b></label>
 
-                            <input type="range" class="form-control-range" id="priceRange"
-                                style="accent-color: rgb(202, 224, 15);" min="0" max="200" step="10" value="200" />
+                            <input type="range" class="form-control-range" id="priceRange" style="accent-color: rgb(202, 224, 15);
+                                text-decoration:none;
+                                " min="0" max="200" step="10" value="200" />
 
                         </div>
-                        <h6 class="card-title " style="color:rgb(202, 224, 15)">FILTER
-                            <img src="assets/svg/arrowRight.svg" width="10" style="padding-bottom: 6px;">
-                            <span id="priceOutput" class="" style="color: black; padding-left: 90px;">$0 - $200</span>
+
+                        <h6 class="card-title " style="color:rgb(202, 224, 15)">
+                            <a href="#" style="color: rgb(202,224,15);">FILTER
+                                <img src="assets/svg/arrowRight.svg" width="10" style="padding-bottom: 6px;">
+                            </a>
+                            <span id="priceOutput" style="color: black; padding-left: 45px;">Price $10 -
+                                $200</span>
                         </h6>
-
-
-
                     </div>
                 </div>
             </div>
-
-
             <div class="col-md-9">
                 <div class="row" id="product-container">
-
                 </div>
-
-
                 <ul id="pagination" class="pagination">
                 </ul>
             </div>
@@ -307,45 +317,89 @@
             <div class="col-md-3">
                 <div class="card">
                     <div class="card-body">
-                        <div class="form-group " id="categoryOptions">
+                        <div class="container mt-4">
                             <label for="trending_items"><b>Trending Items</b></label>
-                            <div class="container text-center">
-  <div class="col">
-    <div class="col">
-      Column
-    </div>
-    <div class="col">
-      Column
-    </div>
-    <div class="col">
-      Column
-    </div>
-  </div>
-</div>
+                            <div class="row">
+                                <div class="col-sm-6">
+                                    <img src="assets/products/10000204_16-fresho-tomato-local.webp" alt="" width="50px">
+                                </div>
+                                <div class="col-sm-6">
+                                    <span><b>Tomato</b></span><br>
+                                    <span><s>$66</s> <span style="color: rgb(202,224,15);">$50</span></span><br>
+                                    <img src="assets/svg/starSolid.svg" alt="" width="10">
+                                    <img src="assets/svg/starSolid.svg" alt="" width="10">
+                                    <img src="assets/svg/starSolid.svg" alt="" width="10">
+                                    <img src="assets/svg/star.svg" alt="" width="10">
+                                    <img src="assets/svg/star.svg" alt="" width="10">
+                                </div>
+                                <div class="col-sm-6">
+                                    <img src="assets/products/10000159_27-fresho-potato.webp" alt="" width="50px">
+                                </div>
+                                <div class="col-sm-6">
+                                    <span><b>Potato</b></span>
+                                    <span><s>$45</s> <span style="color: rgb(202,224,15);">$30</span></span><br>
+                                    <img src="assets/svg/starSolid.svg" alt="" width="10">
+                                    <img src="assets/svg/starSolid.svg" alt="" width="10">
+                                    <img src="assets/svg/starSolid.svg" alt="" width="10">
+                                    <img src="assets/svg/star.svg" alt="" width="10">
+                                    <img src="assets/svg/star.svg" alt="" width="10">
+                                </div>
+                                <div class="col-sm-6">
+                                    <img src="assets/products/10000334_15-fresho-drumstickmoringa.webp" alt="" width="50px">
+                                </div>
+                                <div class="col-sm-6">
+                                    <span><b>Drumstick</b></span>
+                                    <span><s>$88</s> <span style="color: rgb(202,224,15);">$50</span></span><br>
+                                    <img src="assets/svg/starSolid.svg" alt="" width="10">
+                                    <img src="assets/svg/starSolid.svg" alt="" width="10">
+                                    <img src="assets/svg/starSolid.svg" alt="" width="10">
+                                    <img src="assets/svg/star.svg" alt="" width="10">
+                                    <img src="assets/svg/star.svg" alt="" width="10">
+                                </div>
+                                <div class="col-sm-6">
+                                    <img src="assets/products/100285703_15-nandini-goodlife-toned-milk.webp" alt="" width="50px">
+                                </div>
+                                <div class="col-sm-6">
+                                    <span><b>Toned Milk</b></span>
+                                    <span><s>$120</s> <span style="color: rgb(202,224,15);">$100</span></span><br>
+                                    <img src="assets/svg/starSolid.svg" alt="" width="10">
+                                    <img src="assets/svg/starSolid.svg" alt="" width="10">
+                                    <img src="assets/svg/starSolid.svg" alt="" width="10">
+                                    <img src="assets/svg/star.svg" alt="" width="10">
+                                    <img src="assets/svg/star.svg" alt="" width="10">
+                                </div>
+                                <div class="col-sm-6">
+                                    <img src="assets/products/1201414_1-fresho-onion.webp" alt="" width="50px">
+                                </div>
+                                <div class="col-sm-6">
+                                    <span><b>Onion</b></span>
+                                    <span><s>$85</s> <span style="color: rgb(202,224,15);">$70</span></span><br>
+                                    <img src="assets/svg/starSolid.svg" alt="" width="10">
+                                    <img src="assets/svg/starSolid.svg" alt="" width="10">
+                                    <img src="assets/svg/starSolid.svg" alt="" width="10">
+                                    <img src="assets/svg/star.svg" alt="" width="10">
+                                    <img src="assets/svg/star.svg" alt="" width="10">
+                                </div>
+                            </div>
+                            <a href="#" style="color: rgb(202,224,15);">VIEW MORE
+                                <img src="assets/svg/arrowRight.svg" width="10" style="padding-bottom: 6px;">
+                            </a>
                         </div>
                     </div>
                 </div>
             </div>
-
-
-            <div class="col-md-9">
-                <div class="row" id="product-container">
-                </div>
-
-
-                <ul id="pagination" class="pagination">
-                </ul>
-            </div>
         </div>
-    </div>
+        
+        </div>
+        
 
 
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
-        integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
-        crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+            integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+            crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
+            integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
+            crossorigin="anonymous"></script>
 </body>
 
 </html>
