icons added to testimonials

--- a/index.html
+++ b/index.html
@@ -450,11 +450,14 @@
 
         <div class="cardT-row">
             <!-- Card 1 -->
-            <div class="cardT">
+            <div class="cardT" style="position: relative;">
+                <span style="position: absolute; top: 0; left: 10px;">
+                    <img src="assets/svg/quotes.svg" alt="" width="30">
+                </span><br>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quo eum laborum soluta nihil voluptatibus
+                   " Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quo eum laborum soluta nihil voluptatibus
                     repudiandae dolore commodi, magnam, natus consequuntur provident temporibus sint quibusdam ut a at
-                    qui architecto incidunt.
+                    qui architecto incidunt."
                 </p>
                 <img src="assets/svg/starSolidYellow.svg" alt="" width="10">
                 <img src="assets/svg/starSolidYellow.svg" alt="" width="10">
@@ -468,11 +471,14 @@
             </div>
 
             <!-- Card 2 -->
-            <div class="cardT">
+            <div class="cardT" style="position: relative;">
+                <span style="position: absolute; top: 0; left: 10px;">
+                    <img src="assets/svg/quotes.svg" alt="" width="30">
+                </span><br>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, cumque perferendis inventore dolorem
+                    "Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, cumque perferendis inventore dolorem
                     eum ad! Pariatur rerum cum molestiae. Quam neque et iusto? Consequuntur, distinctio officia rerum ex
-                    dolorem perferendis?
+                    dolorem perferendis?"
                 </p>
                 <img src="assets/svg/starSolidYellow.svg" alt="" width="10">
                 <img src="assets/svg/starSolidYellow.svg" alt="" width="10">
@@ -484,11 +490,12 @@
             </div>
 
             <!-- Card 3 -->
-            <div class="cardT">
+            <div class="cardT" style="position: relative;">
+                <span style="position: absolute; top: 0; left: 10px;">
+                    <img src="assets/svg/quotes.svg" alt="" width="30">
+                </span><br>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente dolor ex sint accusantium. Officia
-                    consequatur recusandae totam quae sit. Cum natus eligendi incidunt corporis eos sit exercitationem
-                    facere possimus quisquam!
+                    "Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente dolor ex sint accusantium. Officia consequatur recusandae totam quae sit. Cum natus eligendi incidunt corporis eos sit exercitationem facere possimus quisquam!"
                 </p>
                 <img src="assets/svg/starSolidYellow.svg" alt="" width="10">
                 <img src="assets/svg/starSolidYellow.svg" alt="" width="10">
@@ -496,9 +503,9 @@
                 <img src="assets/svg/starSolidYellow.svg" alt="" width="10">
                 <img src="assets/svg/starSolidYellow.svg" alt="" width="10">
                 <br>
-                <span><b>Kevin Andrew <span style="font-size: 10px; color:rgb(202,224,15)">Manager,
-                            Rex</span></b></span>
+                <span><b>Kevin Andrew <span style="font-size: 10px; color:rgb(202,224,15)">Manager, Rex</span></b></span>
             </div>
+            
         </div>
 
     </div>
